// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should highlight text on key down arrow down and arrow up  1`] = `
<div>
  <div
    class="searchWrapper  inClusterSite"
  >
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test"
        />
      </div>
      <div
        class="resultContainer"
        data-testid="resultContainer"
      >
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer 
        false"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            />
          </div>
        </a>
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer 
        active"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            />
          </div>
        </a>
        <div
          class="result"
        >
          <div
            class="false 
        false"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test
            </p>
            <p
              class="footer"
            >
              test title
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should render correctly with options 1`] = `
<div>
  <div
    class="searchWrapper  inClusterSite"
  >
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test"
        />
      </div>
      <div
        class="resultContainer"
        data-testid="resultContainer"
      >
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer 
        active"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            />
          </div>
        </a>
        <a
          class="result"
          data-testid="result-link"
          href="/"
          target="_blank"
        >
          <div
            class="textContainer 
        false"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test title
            </p>
            <p
              class="footer"
            />
          </div>
        </a>
        <div
          class="result"
        >
          <div
            class="false 
        false"
            data-testid="search-result"
          >
            <p
              class="title"
            >
              test
            </p>
            <p
              class="footer"
            >
              test title
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search should render correctly without options 1`] = `
<div>
  <div
    class="searchWrapper visHidden inClusterSite"
  >
    <div
      class="searchInputWrapper"
    >
      <div
        class="searchInputContainer"
      >
        <svg
          class="icon searchIcon"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z"
          />
        </svg>
        <input
          data-testid="search-input"
          placeholder="SEARCH_PLACEHOLDER"
          type="Search"
          value="test keyword"
        />
      </div>
      
    </div>
  </div>
</div>
`;
